--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,60 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    margin: 0px;
+    padding: 0px;
+    font-size: 16px;
+    color:#555;
+    font-family: 'Open Sans', sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+main{
+    min-height: calc(100vh - 420px);
+}
+h1, h2,h3,h4,h5{
+    color:#333;
+}
+a {
+    text-decoration: none;
+    transition: ease 0.2s;
+}
+img{
+    width: auto;
+    height: auto;
+}
+button{
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+button:focus{
+  outline: none;
+ }
+.btn{
+    border: none;
+    transition: ease 0.2s;
+}
+.btn:focus{
+    outline: none;
+}
+p{
+    line-height: 1.37r5em;
+}
+.btn-primary{
+    color:#fff;
+    background: #f48a18;
+    padding: 0.750rem 1.500rem;
+    font-size: 1rem;
+    border-top-left-radius: 1.563rem;
+    border-bottom-right-radius: 1.563rem;
+}
+.btn-primary:hover{
+    color:#fff;
+    background:#ff4800;
+}
+.center{
+    text-align: center;
+}
+.right{
+  text-align: right;
+}
+.page{
+    margin-bottom:80px;
 }
