--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,3 +1,4 @@
+/* rubric63 -  About Page style */
 @media (min-width: 576px) { 
     .about-page .about-banner{
         background-image: url("/img/tomato.png");
